--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id="title">Welcome to Ember</h2>
-
+<div>
+  {{#link-to 'about'}}
+    About
+  {{/link-to}}
+</div>
+<div>
+  {{#link-to 'index'}}
+    Home
+  {{/link-to}}
+</div>
 {{outlet}}
