--- a/app/templates/calendar.hbs
+++ b/app/templates/calendar.hbs
@@ -1,13 +1,5 @@
-<h2>Calendar page</h2>
+{{main-calendar}}
 
-{{#each model as |event|}}
-  <article class="listing">
-    <h3>{{event.title}}</h3>
-    <div class="detail owner">
-      <span>Title:</span> {{event.title}}
-    </div>
-    <div class="detail type">
-      <span>Description:</span> {{event.description}}
-    </div>
-  </article>
+{{#each model as |eventUnit|}}
+  {{calendar-event event=eventUnit}}
 {{/each}}
