--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,15 @@
-<div>
-  {{#link-to 'about'}}
-    About
-  {{/link-to}}
-</div>
-<div>
-  {{#link-to 'index'}}
-    Home
-  {{/link-to}}
-</div>
+<header>
+  <nav>
+    {{#link-to 'index'}}
+      Calendar
+    {{/link-to}}
+    {{#link-to 'create-event'}}
+      Create event
+    {{/link-to}}
+    {{#link-to 'about'}}
+        About
+      {{/link-to}}
+  </nav>
+</header>
+
 {{outlet}}
