--- a/app/templates/components/calendar-event.hbs
+++ b/app/templates/components/calendar-event.hbs
@@ -3,4 +3,5 @@
     <div class="detail owner">Title: {{event.title}}</div>
     <div class="detail type">Description: {{event.description}}</div>
   <div {{action 'deleteEvent' event}}>delete</div>
+  <div>{{#link-to 'calendar.edit-event'}}edit{{/link-to}}</div>
 </div>
