--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,8 +3,8 @@
     {{#link-to 'index'}}
       Calendar
     {{/link-to}}
-    {{#link-to 'create-event'}}
-      Create event
+    {{#link-to 'event' 0}}
+      Add Event
     {{/link-to}}
     {{#link-to 'about'}}
         About
