--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    {{#link-to 'index'}}
+    {{#link-to 'calendar'}}
       Calendar
     {{/link-to}}
     {{#link-to 'event' 0}}
