--- a/app/templates/components/calendar-event.hbs
+++ b/app/templates/components/calendar-event.hbs
@@ -1,7 +1,9 @@
 <div class="event-wrapper">
-    <div class="event-time">Time: {{event.date}}</div>
-    <div class="detail owner">Title: {{event.title}}</div>
-    <div class="detail type">Description: {{event.description}}</div>
-  <div {{action 'deleteEvent' event}}>delete</div>
-  <div>{{#link-to 'event' event.id}}edit{{/link-to}}</div>
+  <div class="event-time">Time: {{format-event-time event.date}}</div>
+  <div class="detail owner">Title: {{event.title}}</div>
+  <div class="detail type">Description: {{event.description}}</div>
+  <div class="action-buttons">
+    <div {{action 'deleteEvent' event}}>delete</div>
+    <div>{{#link-to 'event' event.id}}edit{{/link-to}}</div>
+  </div>
 </div>
