--- a/app/templates/event.hbs
+++ b/app/templates/event.hbs
@@ -1,1 +1,1 @@
-{{event-handler event=model.event addMode=model.addMode editMode=model.editMode}}
+{{event-handler backToCalendar='backToCalendar' event=model.event addMode=model.addMode editMode=model.editMode}}
