--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,2 @@
 <h2>About MyCalendar</h2>
-<div class="about-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur cumque debitis, dolores est, facere facilis inventore nostrum, perspiciatis quibusdam quod quos rerum tempore! Amet nesciunt nisi numquam odio quia!</div>
+<div class="about-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur cumque debitis, dolores est, facere facilis inventore nostrum, perspiciatis quibusdam quod quos rerum tempore! Amet nesciunt nisi numquam odio quia</div>
